Added integration test

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -84,27 +84,27 @@
     "%%sql\n",
     "CREATE\n",
     "OR REPLACE TABLE US_FLIGHTS (\n",
-    "  FL_DATE TIMESTAMP, -- was DATE\n",
+    "  FL_DATE TIMESTAMP, \n",
     "  OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
     "  ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
     "  ORIGIN_STATE_ABR CHAR(2),\n",
     "  DEST_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
     "  DEST_STATE_ABR CHAR(2),\n",
     "  CRS_DEP_TIME CHAR(4),\n",
-    "  DEP_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  DEP_DELAY DOUBLE, \n",
     "  CRS_ARR_TIME CHAR(4),\n",
-    "  ARR_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  ARR_DELAY DOUBLE,\n",
     "  CANCELLED BOOLEAN,\n",
     "  CANCELLATION_CODE CHAR(1),\n",
     "  DIVERTED BOOLEAN,\n",
-    "  CRS_ELAPSED_TIME DOUBLE, -- was DECIMAL(6,2)\n",
-    "  ACTUAL_ELAPSED_TIME DOUBLE, -- was DECIMAL(6,2)\n",
-    "  DISTANCE DOUBLE, -- was DECIMAL(6,2)\n",
-    "  CARRIER_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
-    "  WEATHER_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
-    "  NAS_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
-    "  SECURITY_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
-    "  LATE_AIRCRAFT_DELAY DOUBLE -- was DECIMAL(6,2)\n",
+    "  CRS_ELAPSED_TIME DOUBLE,\n",
+    "  ACTUAL_ELAPSED_TIME DOUBLE, \n",
+    "  DISTANCE DOUBLE,\n",
+    "  CARRIER_DELAY DOUBLE,\n",
+    "  WEATHER_DELAY DOUBLE,\n",
+    "  NAS_DELAY DOUBLE,\n",
+    "  SECURITY_DELAY DOUBLE,\n",
+    "  LATE_AIRCRAFT_DELAY DOUBLE\n",
     ")"
    ]
   },
@@ -117,7 +117,7 @@
     "\n",
     "This section demonstrates how to import CSV files from a remote source into the database.\n",
     "\n",
-    "First we will import a list of US airlines. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation."
+    "First we will import a list of **US airlines**. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation."
    ]
   },
   {
@@ -142,7 +142,7 @@
    "id": "c2428c14-dd23-4891-8c2f-533f5c2b8f05",
    "metadata": {},
    "source": [
-    "Next, we will import data about flights in February 2024:"
+    "Next, we will import data about **flights** in February 2024:"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "SELECT\n",
     "  CARRIER_NAME \"Airline\",\n",
     "  SUM(CARRIER_DELAY) \"Combined Delay\",\n",
@@ -197,8 +197,6 @@
     "### 2.3 Importing a Parquet File From an AWS S3 Bucket\n",
     "\n",
     "This demo uses a file already uploaded to S3 bucket `ai-lab-example-data-s3`.\n",
-    "\n",
-    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025 or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "First we will define a connection pointing to the S3 bucket:"
    ]
@@ -259,7 +257,9 @@
    "id": "0dc80445-e5c0-43c1-ae34-f16326d6fb94",
    "metadata": {},
    "source": [
-    "Now we can import the Parquet file from S3 into the database:"
+    "Now we can import the Parquet file from S3 into the database:\n",
+    "\n",
+    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm), hence, the import is currently commented out."
    ]
   },
   {
@@ -270,8 +270,8 @@
    "outputs": [],
    "source": [
     "%%sql \n",
-    "IMPORT INTO US_FLIGHTS FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
-    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'"
+    "-- IMPORT INTO US_FLIGHTS FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
+    "--    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'"
    ]
   },
   {
@@ -300,7 +300,7 @@
     "## 3. PyExasol\n",
     "\n",
     "Please note\n",
-    "* Accessing Exasol database versions `2025` and higher requires Pyexasol version ≥ `1.2`.\n",
+    "* Using import or export functions with Exasol database versions `2025.*` and higher requires Pyexasol version ≥ `1.2`.\n",
     "* AI Lab currently is shipped with pyexasol version `0.27.0`, the Pyexasol examples can only be executed with Exasol database versions < `2025`.\n",
     "\n",
     "### 3.1 Importing a CSV File From the Local Filesystem\n",
@@ -342,12 +342,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e333f0ae-ac41-4664-a214-65bdbc4541e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
+    "\n",
+    "query = \"SELECT * FROM {table!q} WHERE CARRIER_NAME LIKE {pattern!s}\"\n",
+    "params = {\n",
+    "    \"table\": (ai_lab_config.db_schema, \"US_AIRLINES\"),\n",
+    "    \"pattern\": \"% local CSV file via pyexasol\",\n",
+    "}\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    result = conn.execute(query, params).fetchone()\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a773a861-8399-4a17-9fe7-d1ac2e960f7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
     "SELECT * FROM US_AIRLINES WHERE CARRIER_NAME LIKE '% local CSV file via pyexasol'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23e99c7a-e6a2-4497-8a74-054dab3ca131",
+   "metadata": {},
+   "source": [
+    "### 3.2 Importing a Parquet File From an AWS S3 Bucket\n",
+    "\n",
+    "This demo uses \n",
+    "* a file already uploaded to S3 bucket `ai-lab-example-data-s3` \n",
+    "* and the Exasol connection object `AI_LAB_FIRST_STEPS_S3` created before.\n",
+    "\n",
+    "First we will truncate table `US_FLIGHTS`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce8ed658-07af-433b-8d77-0aedc3e51310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "TRUNCATE TABLE US_FLIGHTS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dfdd7ec-5cd5-4082-a565-ee17166fd691",
+   "metadata": {},
+   "source": [
+    "**Please note**: \n",
+    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "* Hence, the import is currently commented out.\n",
+    "\n",
+    "Now we can import the Parquet file from S3 into the database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70b4826c-12df-4b0f-a5f9-868779bc1905",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    IMPORT INTO {table!q} FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
+    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'\n",
+    "\"\"\"\n",
+    "params = {\n",
+    "    \"table\": (ai_lab_config.db_schema, \"US_AIRLINES\"),\n",
+    "}\n",
+    "\n",
+    "#with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "#    result = conn.execute(query, params).fetchone()\n",
+    "#print(f\"Imported {result.rowcount()} rows.\")"
    ]
   },
   {
@@ -359,7 +438,9 @@
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
     "\n",
-    "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:"
+    "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:\n",
+    "\n",
+    "TODO use pyexasol not JupySQL."
    ]
   },
   {
@@ -407,24 +488,6 @@
     "    result = conn.execute(query, params)\n",
     "\n",
     "print(f\"Imported {result.rowcount()} rows.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "011de876-d82f-4c3b-8358-dc81c3faf601",
-   "metadata": {},
-   "source": [
-    "We will assign the formatted SQL query to a variable for reusing it later on:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f63d51d-e044-4dae-ac8e-c5f9274afa09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import_remote_csv_sql = result.query"
    ]
   },
   {
@@ -483,14 +546,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bce8489-e920-43ce-a9fc-3aee01ba6cb1",
+   "id": "8f00e6c4-4f44-47d7-a85f-5c1bb70708a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reusing variable import_remote_csv_sql defined in pyexasol example above\n",
+    "from sqlalchemy import text\n",
     "\n",
+    "t = (\n",
+    "    text(\n",
+    "        f\"\"\"\n",
+    "        IMPORT INTO \"{ai_lab_config.db_schema}\".\"US_FLIGHTS\" \n",
+    "        FROM CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
+    "        FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
+    "        (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21) \n",
+    "        SKIP = 1\n",
+    "        \"\"\"\n",
+    "    )\n",
+    ")\n",
     "with engine.connect() as conn:\n",
-    "    result = conn.execute(import_remote_csv_sql)\n",
+    "    result = conn.execute(t)\n",
     "print(f\"Imported {result.rowcount} rows.\")"
    ]
   },
@@ -534,15 +608,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = \"\"\"\n",
-    "IMPORT INTO US_FLIGHTS\n",
-    "    FROM PARQUET AT AI_LAB_FIRST_STEPS_S3\n",
-    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'\n",
-    "\"\"\"\n",
+    "from sqlalchemy import text\n",
     "\n",
-    "with engine.connect() as conn:\n",
-    "    result = conn.execute(sql)\n",
-    "print(f\"Imported {result.rowcount} rows.\")"
+    "t = (\n",
+    "    text(\n",
+    "        f\"\"\"\n",
+    "        IMPORT INTO \"{ai_lab_config.db_schema}\".\"US_FLIGHTS\" \n",
+    "        FROM PARQUET AT AI_LAB_FIRST_STEPS_S3\n",
+    "        FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'\n",
+    "        \"\"\"\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# with engine.connect() as conn:\n",
+    "#     result = conn.execute(t)\n",
+    "# print(f\"Imported {result.rowcount} rows.\")"
    ]
   },
   {
@@ -550,7 +630,7 @@
    "id": "35335a66-dace-4082-ba35-a3bcc1ed3d54",
    "metadata": {},
    "source": [
-    "### 3.4 SQLAlchemy Query Builders\n",
+    "### 3.4 SQLAlchemy Query With `bindparams`\n",
     "\n",
     "This section demonstrates using SQLAlchemy features [text expression](https://docs.sqlalchemy.org/en/20/core/sqlelement.html#sqlalchemy.sql.expression.text) and [TextClause](https://docs.sqlalchemy.org/en/20/core/sqlelement.html#sqlalchemy.sql.expression.TextClause) to build a query, execute it and iterate the result set:"
    ]
@@ -583,6 +663,39 @@
     "with engine.connect() as conn:\n",
     "    for dt, departure in conn.execute(t):\n",
     "        print(datetime.fromisoformat(dt).date(), departure)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7867d3a-a0ce-4c79-b113-08798a91c11c",
+   "metadata": {},
+   "source": [
+    "Alternatively we can use SQLAlchemy's `MetaData`, retrieve a table and use its `select` statement:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "676b4ae9-19de-4099-92df-d990d242d1c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import MetaData\n",
+    "from sqlalchemy.orm import Session\n",
+    "\n",
+    "meta = MetaData()\n",
+    "meta.reflect(engine, schema=ai_lab_config.db_schema)\n",
+    "\n",
+    "flights = meta.tables[f\"{db_schema}.us_flights\"]\n",
+    "stmt = (\n",
+    "    flights.select()\n",
+    "    .where(flights.c.op_carrier_airline_id == 20452)\n",
+    "    .where(flights.c.origin_state_abr == \"TX\")\n",
+    "    .where(flights.c.dest_state_abr == \"NJ\")\n",
+    ")\n",
+    "with Session(engine) as session:\n",
+    "    for r in session.execute(stmt):\n",
+    "        print(f'Departure: {r[0].date()} {r[6]}')    "
    ]
   },
   {
@@ -658,6 +771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from exasol.nb_connector.connections import open_bucketfs_location\n",
     "bfs = open_bucketfs_location(ai_lab_config)\n",
     "for p in bfs.iterdir():\n",
     "    print(f'- {p.name}')"
@@ -706,12 +820,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bfcdca7-ecc2-40a4-92be-d75dca1c3e42",
+   "id": "ba88c64b-e3e2-4366-af0c-86c77db35132",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT bfs_file_content('/buckets/bfsdefault/default/text_file.txt')"
+    "SELECT bfs_file_content('{{remote.as_udf_path()}}')"
    ]
   }
  ],
