Updated first steps notebook (12)
Changed GH workflows for itests

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -203,10 +203,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "id": "e5de58f6-b561-45c3-bc96-38523fcff58b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "CREATE\n",
@@ -257,9 +293,11 @@
    "id": "0dc80445-e5c0-43c1-ae34-f16326d6fb94",
    "metadata": {},
    "source": [
-    "Now we can import the Parquet file from S3 into the database:\n",
+    "**Please note**: \n",
+    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "* Hence, the import is currently commented out.\n",
     "\n",
-    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm), hence, the import is currently commented out."
+    "Now we can import the Parquet file from S3 into the database:"
    ]
   },
   {
@@ -372,66 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e99c7a-e6a2-4497-8a74-054dab3ca131",
-   "metadata": {},
-   "source": [
-    "### 3.2 Importing a Parquet File From an AWS S3 Bucket\n",
-    "\n",
-    "This demo uses \n",
-    "* a file already uploaded to S3 bucket `ai-lab-example-data-s3` \n",
-    "* and the Exasol connection object `AI_LAB_FIRST_STEPS_S3` created before.\n",
-    "\n",
-    "First we will truncate table `US_FLIGHTS`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce8ed658-07af-433b-8d77-0aedc3e51310",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "TRUNCATE TABLE US_FLIGHTS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5dfdd7ec-5cd5-4082-a565-ee17166fd691",
-   "metadata": {},
-   "source": [
-    "**Please note**: \n",
-    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
-    "* Hence, the import is currently commented out.\n",
-    "\n",
-    "Now we can import the Parquet file from S3 into the database:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70b4826c-12df-4b0f-a5f9-868779bc1905",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
-    "\n",
-    "query = \"\"\"\n",
-    "    IMPORT INTO {table!q} FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
-    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'\n",
-    "\"\"\"\n",
-    "params = {\n",
-    "    \"table\": (ai_lab_config.db_schema, \"US_AIRLINES\"),\n",
-    "}\n",
-    "\n",
-    "#with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "#    result = conn.execute(query, params).fetchone()\n",
-    "#print(f\"Imported {result.rowcount()} rows.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c96353d-4431-4cf3-99d2-0e5356721886",
+   "id": "38838085-0ea2-4570-9581-7de2f9e1ba20",
    "metadata": {},
    "source": [
     "### 3.2 Importing a CSV File From Remote\n",
@@ -446,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "450fbedb-e070-4821-a8df-00cc964075d8",
+   "id": "8e2a0de0-7b72-4466-8f61-815d40ee0f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2324056a-65ad-4bfa-b044-d41154547d85",
+   "id": "0759b904-22b2-4725-a2ef-cb20cdba4e6a",
    "metadata": {},
    "source": [
     "Now let's run the import via pyexasol. This example uses a query with separate params and [pyexasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html): "
@@ -464,10 +443,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "04364f78-a1f2-49ec-9ec9-959a2604a044",
+   "execution_count": 176,
+   "id": "317449c8-4347-40ae-8c7c-bcbe1eb06656",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imported 519221 rows.\n"
+     ]
+    }
+   ],
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
@@ -487,6 +474,121 @@
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    result = conn.execute(query, params)\n",
     "\n",
+    "print(f\"Imported {result.rowcount()} rows.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23e99c7a-e6a2-4497-8a74-054dab3ca131",
+   "metadata": {},
+   "source": [
+    "### 3.2 Importing a Parquet File From an AWS S3 Bucket\n",
+    "\n",
+    "This demo uses \n",
+    "* a file already uploaded to S3 bucket `ai-lab-example-data-s3` \n",
+    "* and the Exasol connection object `AI_LAB_FIRST_STEPS_S3` created before.\n",
+    "\n",
+    "First we will truncate table `US_FLIGHTS`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "ce8ed658-07af-433b-8d77-0aedc3e51310",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"color: green\">519221 rows affected.</span>"
+      ],
+      "text/plain": [
+       "519221 rows affected."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "TRUNCATE TABLE US_FLIGHTS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dfdd7ec-5cd5-4082-a565-ee17166fd691",
+   "metadata": {},
+   "source": [
+    "**Please note**: \n",
+    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "* Hence, the import is currently commented out.\n",
+    "\n",
+    "Now we can import the Parquet file from S3 into the database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "70b4826c-12df-4b0f-a5f9-868779bc1905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imported 519221 rows.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    IMPORT INTO {table!q} FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
+    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'\n",
+    "\"\"\"\n",
+    "params = {\n",
+    "    \"table\": (ai_lab_config.db_schema, \"US_FLIGHTS\"),\n",
+    "}\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    result = conn.execute(query, params)\n",
     "print(f\"Imported {result.rowcount()} rows.\")"
    ]
   },
@@ -577,8 +679,6 @@
     "\n",
     "This section demonstrates how to import a CSV file from an AWS S3 Bucket into the database using SQLAlchemy.\n",
     "\n",
-    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025 or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
-    "\n",
     "First we will truncate table `US_FLIGHTS` again:"
    ]
   },
@@ -598,6 +698,10 @@
    "id": "d11dcb6d-d3e5-4e1e-8d61-ba59897c56e9",
    "metadata": {},
    "source": [
+    "**Please note**: \n",
+    "* Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "* Hence, the import is currently commented out.\n",
+    "\n",
     "Now we can import the Parquet file from S3 into the database:"
    ]
   },
@@ -670,7 +774,11 @@
    "id": "d7867d3a-a0ce-4c79-b113-08798a91c11c",
    "metadata": {},
    "source": [
-    "Alternatively we can use SQLAlchemy's `MetaData`, retrieve a table and use its `select` statement:"
+    "Alternatively we can \n",
+    "* Use SQLAlchemy's `MetaData`\n",
+    "* Retrieve a table \n",
+    "* Use its `select` statement and\n",
+    "* Execute it in a SQLAlchemy `Session` object."
    ]
   },
   {
@@ -772,6 +880,7 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_bucketfs_location\n",
+    "\n",
     "bfs = open_bucketfs_location(ai_lab_config)\n",
     "for p in bfs.iterdir():\n",
     "    print(f'- {p.name}')"
