Updated first steps notebook (13)

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -203,46 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "id": "e5de58f6-b561-45c3-bc96-38523fcff58b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 180,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "CREATE\n",
@@ -443,18 +407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "id": "317449c8-4347-40ae-8c7c-bcbe1eb06656",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imported 519221 rows.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
@@ -493,58 +449,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "ce8ed658-07af-433b-8d77-0aedc3e51310",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@172.17.0.1:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">519221 rows affected.</span>"
-      ],
-      "text/plain": [
-       "519221 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "TRUNCATE TABLE US_FLIGHTS"
@@ -564,18 +472,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "id": "70b4826c-12df-4b0f-a5f9-868779bc1905",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imported 519221 rows.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
@@ -736,49 +636,13 @@
    "source": [
     "### 3.4 SQLAlchemy Query With `bindparams`\n",
     "\n",
-    "This section demonstrates using SQLAlchemy features [text expression](https://docs.sqlalchemy.org/en/20/core/sqlelement.html#sqlalchemy.sql.expression.text) and [TextClause](https://docs.sqlalchemy.org/en/20/core/sqlelement.html#sqlalchemy.sql.expression.TextClause) to build a query, execute it and iterate the result set:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fae1fad-4811-4715-a4f5-c5d1c850efc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sqlalchemy import text\n",
-    "from datetime import datetime\n",
-    "from sqlalchemy.types import DateTime, String\n",
-    "\n",
-    "t = (\n",
-    "    text(\n",
-    "        \"\"\"\n",
-    "        SELECT FL_DATE, CRS_DEP_TIME \n",
-    "        FROM US_FLIGHTS \n",
-    "        WHERE OP_CARRIER_AIRLINE_ID =:carrier_id\n",
-    "        AND ORIGIN_STATE_ABR=:origin\n",
-    "        AND DEST_STATE_ABR=:dest\n",
-    "        \"\"\"\n",
-    "    )\n",
-    "    .bindparams(carrier_id=20452, origin=\"TX\", dest=\"NJ\")\n",
-    "    .columns(FL_DATE=DateTime, CRS_DEP_TIME=String)\n",
-    ")\n",
-    "\n",
-    "with engine.connect() as conn:\n",
-    "    for dt, departure in conn.execute(t):\n",
-    "        print(datetime.fromisoformat(dt).date(), departure)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7867d3a-a0ce-4c79-b113-08798a91c11c",
-   "metadata": {},
-   "source": [
-    "Alternatively we can \n",
-    "* Use SQLAlchemy's `MetaData`\n",
+    "This section demonstrates using some SQLAlchemy features \n",
+    "* [sqlalchemy.MetaData](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
+    "* Query existing SQL tables with [.reflect()](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
     "* Retrieve a table \n",
-    "* Use its `select` statement and\n",
-    "* Execute it in a SQLAlchemy `Session` object."
+    "* Use its [select](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.Table.select) statement and\n",
+    "* Execute it in a SQLAlchemy [Session](https://docs.sqlalchemy.org/en/20/orm/session_api.html#sqlalchemy.orm.Session) object\n",
+    "* Iterate the result set"
    ]
   },
   {
