Fixed integration test

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -722,8 +722,8 @@
     "\n",
     "file = Path(\"first_steps/text_file.txt\")\n",
     "bfs = open_bucketfs_location(ai_lab_config)\n",
-    "remote = bfs / file.name\n",
-    "remote.write(file.read_bytes())"
+    "file_in_bfs = bfs / file.name\n",
+    "file_in_bfs.write(file.read_bytes())"
    ]
   },
   {
@@ -798,7 +798,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT bfs_file_content('{{remote.as_udf_path()}}')"
+    "SELECT bfs_file_content('{{file_in_bfs.as_udf_path()}}')"
    ]
   }
  ],
