Fixed error caused by empty Jupysql cell

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -272,6 +272,8 @@
    "outputs": [],
    "source": [
     "%%sql \n",
+    "SELECT 1 -- avoid error from empty cell \n",
+    "\n",
     "-- IMPORT INTO US_FLIGHTS FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
     "--    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'"
    ]
