--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -293,7 +293,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql SELECT * FROM US_FLIGHTS"
+    "%%sql \n",
+    "SELECT * FROM US_FLIGHTS"
    ]
   },
   {
