--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -659,7 +659,8 @@
     "from sqlalchemy.orm import Session\n",
     "\n",
     "meta = MetaData()\n",
-    "meta.reflect(engine, schema=ai_lab_config.db_schema)\n",
+    "db_schema = ai_lab_config.db_schema\n",
+    "meta.reflect(engine, schema=db_schema)\n",
     "\n",
     "flights = meta.tables[f\"{db_schema}.us_flights\"]\n",
     "stmt = (\n",
