--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -302,11 +302,14 @@
    "id": "5582ac55-9c56-47d9-b286-948835d976c4",
    "metadata": {},
    "source": [
-    "## 3. PyExasol\n",
+    "## 3. Using PyExasol with Exasol AI Lab\n",
+    "\n",
+    "[PyExasol](https://exasol.github.io/pyexasol/master/index.html) is the basic Python connector for interacting with Exasol databases.\n",
     "\n",
     "Please note\n",
-    "* Using import or export functions with Exasol database versions `2025.*` and higher requires Pyexasol version ≥ `1.2`.\n",
-    "* AI Lab currently is shipped with pyexasol version `0.27.0`, the Pyexasol examples can only be executed with Exasol database versions < `2025`.\n",
+    "* Using PyExasol's import or export functions with Exasol database versions `2025.*` and higher requires Pyexasol version ≥ `1.2`.\n",
+    "* AI Lab currently is shipped with pyexasol version `0.27.0`.\n",
+    "* Hence, the Pyexasol examples can only be executed with Exasol database versions < `2025`.\n",
     "\n",
     "### 3.1 Importing a CSV File From the Local Filesystem\n",
     "\n",
