After private presentation rehearsal
Updated first steps notebook

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -344,7 +344,7 @@
    "id": "e023d10d-ccdb-4c2d-8fa5-655e227e8c76",
    "metadata": {},
    "source": [
-    "Let's verify successful import:"
+    "We will also verify the successful using a query with separate params and [PyExasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html):"
    ]
   },
   {
@@ -368,28 +368,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a773a861-8399-4a17-9fe7-d1ac2e960f7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT * FROM US_AIRLINES WHERE CARRIER_NAME LIKE '% local CSV file via pyexasol'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "38838085-0ea2-4570-9581-7de2f9e1ba20",
    "metadata": {},
    "source": [
     "### 3.2 Importing a CSV File From Remote\n",
     "\n",
-    "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
+    "This section demonstrates how to import a CSV file from a remote source into the database using PyExasol.\n",
     "\n",
-    "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:\n",
-    "\n",
-    "TODO use pyexasol not JupySQL."
+    "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:"
    ]
   },
   {
@@ -408,7 +395,7 @@
    "id": "0759b904-22b2-4725-a2ef-cb20cdba4e6a",
    "metadata": {},
    "source": [
-    "Now let's run the import via pyexasol. This example uses a query with separate params and [pyexasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html): "
+    "Now let's run the import&mdash;again using a query with separate params and PyExasol SQL formatting:"
    ]
   },
   {
@@ -485,17 +472,17 @@
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
-    "query = \"\"\"\n",
-    "    IMPORT INTO {table!q} FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
-    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'\n",
-    "\"\"\"\n",
+    "query = \"IMPORT INTO {table!q} FROM PARQUET AT {connection} FILE {file!s}\"\n",
+    "\n",
     "params = {\n",
     "    \"table\": (ai_lab_config.db_schema, \"US_FLIGHTS\"),\n",
+    "    \"connection\": \"AI_LAB_FIRST_STEPS_S3\",\n",
+    "    \"file\": \"first_steps/US_FLIGHTS_FEB_2024.parquet\",\n",
     "}\n",
     "\n",
-    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    result = conn.execute(query, params)\n",
-    "print(f\"Imported {result.rowcount()} rows.\")"
+    "#with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "#    result = conn.execute(query, params)\n",
+    "#print(f\"Imported {result.rowcount()} rows.\")"
    ]
   },
   {
@@ -640,15 +627,15 @@
    "id": "35335a66-dace-4082-ba35-a3bcc1ed3d54",
    "metadata": {},
    "source": [
-    "### 3.4 SQLAlchemy Query With `bindparams`\n",
+    "### 3.4 Querying Using SQLAlchemy’s Metadata Concept\n",
     "\n",
     "This section demonstrates using some SQLAlchemy features \n",
-    "* [sqlalchemy.MetaData](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
-    "* Query existing SQL tables with [.reflect()](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
-    "* Retrieve a table \n",
-    "* Use its [select](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.Table.select) statement and\n",
-    "* Execute it in a SQLAlchemy [Session](https://docs.sqlalchemy.org/en/20/orm/session_api.html#sqlalchemy.orm.Session) object\n",
-    "* Iterate the result set"
+    "* Instantiating class [sqlalchemy.MetaData](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
+    "* Querying existing SQL tables with [.reflect()](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
+    "* Retrieving a specific table \n",
+    "* Using its [select](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.Table.select) statement and\n",
+    "* Executing it in a SQLAlchemy [Session](https://docs.sqlalchemy.org/en/20/orm/session_api.html#sqlalchemy.orm.Session) object\n",
+    "* Iterating the result set"
    ]
   },
   {
