--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -32,9 +32,9 @@
    "id": "d15075fa-8c9d-4e60-82d9-28d92d38ee0e",
    "metadata": {},
    "source": [
-    "## 2. Using JupySQL\n",
+    "## 2. Using JupySQL with Exasol AI Lab\n",
     "\n",
-    "First we will activate the [JupySQL](https://jupysql.ploomber.io) magics:"
+    "Next, we will activate the [JupySQL](https://jupysql.ploomber.io) magics:"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "id": "342a7800-253d-43a0-9bd7-89932876317d",
    "metadata": {},
    "source": [
-    "In the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](#4.-SQLAlchemy) below.\n",
+    "JupySQL allows you to run SQL and plot large datasets in Jupyter via a %sql, %%sql, and %sqlplot magics. Using these magics, you can enter SQL directly into notebook cells.\nIn the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](#4.-SQLAlchemy) below.\n",
     "\n",
     "### 2.1 Create Database Tables\n",
     "\n",
@@ -113,7 +113,7 @@
    "id": "1f83db93-e196-47ae-8e41-48eb21f50f41",
    "metadata": {},
    "source": [
-    "### 2.2 Importing CSV Files From Remote\n",
+    "### 2.2 Importing CSV Files from Remote\n",
     "\n",
     "This section demonstrates how to import CSV files from a remote source into the database.\n",
     "\n",
@@ -194,7 +194,7 @@
    "id": "c29ff5f1-1eb8-452c-8827-6c675c71dba5",
    "metadata": {},
    "source": [
-    "### 2.3 Importing a Parquet File From an AWS S3 Bucket\n",
+    "### 2.3 Importing a Parquet File from an AWS S3 Bucket\n",
     "\n",
     "This demo uses a file already uploaded to S3 bucket `ai-lab-example-data-s3`.\n",
     "\n",
@@ -311,11 +311,11 @@
     "* AI Lab currently is shipped with pyexasol version `0.27.0`.\n",
     "* Hence, the Pyexasol examples can only be executed with Exasol database versions < `2025`.\n",
     "\n",
-    "### 3.1 Importing a CSV File From the Local Filesystem\n",
+    "### 3.1 Importing a CSV File from the Local Filesystem\n",
     "\n",
-    "This section demonstrates how to import a CSV file from the local file system into the database using pyexasol.\n",
+    "This section demonstrates how to import a CSV file from the local file system into the database using Pyexasol.\n",
     "\n",
-    "Function `open_pyexasol_connection()` opens a connection, using the configuration from the SCS."
+    "The function `open_pyexasol_connection()` opens a connection, using the configuration from the SCS."
    ]
   },
   {
@@ -344,7 +344,7 @@
    "id": "e023d10d-ccdb-4c2d-8fa5-655e227e8c76",
    "metadata": {},
    "source": [
-    "We will also verify the successful using a query with separate params and [PyExasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html):"
+    "We will also verify the success using a query with separate params and [PyExasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html):"
    ]
   },
   {
@@ -372,11 +372,11 @@
    "id": "38838085-0ea2-4570-9581-7de2f9e1ba20",
    "metadata": {},
    "source": [
-    "### 3.2 Importing a CSV File From Remote\n",
+    "### 3.2 Importing a CSV File from Remote\n",
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using PyExasol.\n",
     "\n",
-    "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:"
+    "First, we will truncate table `US_FLIGHTS` to be able to import the flight data again:"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "id": "0759b904-22b2-4725-a2ef-cb20cdba4e6a",
    "metadata": {},
    "source": [
-    "Now let's run the import&mdash;again using a query with separate params and PyExasol SQL formatting:"
+    "Now let's run the import&mdash;again using a query with separate parameter and PyExasol SQL formatting:"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "id": "23e99c7a-e6a2-4497-8a74-054dab3ca131",
    "metadata": {},
    "source": [
-    "### 3.2 Importing a Parquet File From an AWS S3 Bucket\n",
+    "### 3.2 Importing a Parquet File from an AWS S3 Bucket\n",
     "\n",
     "This demo uses \n",
     "* a file already uploaded to S3 bucket `ai-lab-example-data-s3` \n",
@@ -490,9 +490,9 @@
    "id": "61b8024f-69c1-4247-ab5a-946d5e98fe2b",
    "metadata": {},
    "source": [
-    "## 4. SQLAlchemy\n",
+    "## 4. Using SQLAlchemy with Exasol AI Lab\n",
     "\n",
-    "Function `open_sqlalchemy_connection()` returns a SQLAlchemy engine, again using the configuration from the SCS.\n",
+    "The function `open_sqlalchemy_connection()` returns a SQLAlchemy engine, again using the configuration from the SCS.\n",
     "This engine will be used by the examples based on SQLAlchemy."
    ]
   },
@@ -512,7 +512,7 @@
    "id": "e9c7e497-cf0a-4158-b656-221a80086a90",
    "metadata": {},
    "source": [
-    "### 3.1 Importing a CSV File From Remote\n",
+    "### 3.1 Importing a CSV File from Remote\n",
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using SQLAlchemy.\n",
     "\n",
@@ -627,7 +627,7 @@
    "id": "35335a66-dace-4082-ba35-a3bcc1ed3d54",
    "metadata": {},
    "source": [
-    "### 3.4 Querying Using SQLAlchemy’s Metadata Concept\n",
+    "### 3.4 Querying using SQLAlchemy’s Metadata Concept\n",
     "\n",
     "This section demonstrates using some SQLAlchemy features \n",
     "* Instantiating class [sqlalchemy.MetaData](https://docs.sqlalchemy.org/en/20/core/metadata.html#sqlalchemy.schema.MetaData)\n",
@@ -676,7 +676,7 @@
     "Such data can be arbitrary files including \n",
     "* Data to be processed by [User Defined Scripts](https://docs.exasol.com/db/latest/database_concepts/udf_scripts.htm) (UDFs)\n",
     "* [Script-Language Containers](https://github.com/exasol/script-languages-release) (SLCs)\n",
-    "* Pretrained Large Language AI Models\n",
+    "* AI Models\n",
     "\n",
     "### 5.1 Uploading a File to the BucketFS\n",
     "\n",
@@ -701,7 +701,7 @@
    "source": [
     "And now, let's upload the file into the BucketFS.\n",
     "\n",
-    "Function `open_bucketfs_location()` returns a cursor into Exasols BucketFS, also using the configuration in the SCS."
+    "The function `open_bucketfs_location()` returns a path into Exasols BucketFS, also using the configuration in the SCS."
    ]
   },
   {
